--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
 
     <h1>Hello Ninjas!</h1>
+    <a href="">Link</a>
+    <p class="error">Error</p>
+    <p class="notification">Notification</p>
+    <button>Button</button>
+
     
 </body>
 </html>
