Lesson 6: Nested Rules

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
 
-    <h1>Hello Ninjas!</h1>
-    <a href="">Link</a>
-    <p class="error">Error</p>
-    <p class="notification">Notification</p>
-    <button>Button</button>
+    <!-- cards -->
+    <h2>Cards</h2>
+    <div class="card">
+        <h1 class="card-title">Card title</h1>
+        <p class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum  <a href="">eos delectus ullam, nam facilis</a> neque distinctio eaque dolores inventore beatae!</p>
+    </div>
+
+    
+
+
 
     
 </body>
