--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <span class="text-orange">orange text</span> | 
     <span class="text-gray">gray text</span>
 
+    
+
+
     <br><br>
 
     <span class="bg-primary text-white">bg primary</span> |
@@ -65,6 +68,8 @@
     <a href="#" class="btn-complement-purple">click me</a>
     <a href="#" class="btn-complement-primary">click me</a>
 
+    <hr class="mt-4 mb-4">
+
 
     <!-- cards -->
     <h2>Cards</h2>
@@ -72,6 +77,16 @@
         <h1 class="card-title">Card title</h1>
         <p class="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum  <a href="">eos delectus ullam, nam facilis</a> neque distinctio eaque dolores inventore beatae!</p>
     </div> 
+
+    <!-- font sizes -->
+    <h2 class="mb-2">Font Sizes</h2>
+    <div class="font-sm">this is small font</div>
+    <div class="font-md">this is medium font</div>
+    <div class="font-lg">this is large font</div>
+    <div class="font-xl">this is extra large font</div>
+    <div class="font-xxl">this is extra, extra large font</div>
+
+    <hr class="mt-4 mb-4">
 
 
 
